--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: go
+sudo: false
 go:
-- 1.3.3
-- 1.4.3
-- 1.5.3
-
+  - tip
+before_install:
+  - go get github.com/axw/gocov/gocov
+  - go get github.com/mattn/goveralls
+  - if ! go get github.com/golang/tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
-- go test -v ./...
+  - $HOME/gopath/bin/goveralls -service=travis-ci
